# audible-cli

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  convert.sh  docker-compose.yml  main.sh  pyproject.toml  setup.py  start.sh  update.sh
src/audible_cli/: models.py
src/audible_cli/cmds/: cmd_download.py
tests/: test_fake.py
