[tool.poetry]
name = "audible-cli"
version = "0.2.4"
description = "Command line interface (cli) for the audible package."
license = "AGPL-3.0-only"
authors = ["mkb79 <mkb79@hackitall.de>"]
readme = "README.md"
homepage = "https://github.com/mkb79/audible-cli"
repository = "https://github.com/mkb79/audible-cli"
keywords = [
    "Audible",
    "API",
    "async",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
packages = [{include = "audible_cli", from = "src"}]

[tool.poetry.urls]
Changelog = "https://github.com/mkb79/audible-cli/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.7, <3.12"
audible = ">=0.8.2"
aiofiles = "^22.1.0"
httpx = "^0.23.3"
packaging = "^23.0"
Pillow = "^9.4.0"
tabulate = "^0.9.0"
toml = "^0.10.2"
tqdm = "^4.64.1"
questionary = "^1.10.0"
colorama = {version = "*", markers = "platform_system == \"Windows\""}
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"
commitizen = "^2.41.0"


[tool.poetry.scripts]
audible = "audible_cli:main"
audible-quickstart = "audible_cli:quickstart"

[tool.commitizen]
name = "cz_conventional_commits"
version_files = [
    "src/audible_cli/__init__.py",
    "pyproject.toml:version"
]
version = "0.2.4"
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
